<resources>
    <string name="app_name">Box</string>
    <string name="btnGolpesBasicos">Si</string>
    <string name="Jab">Jab</string>
    <string name="descripcionJab">Es el golpe más basico, importante para mantener distancia e iniciar una combinacion.</string>
    <string name="Directo">Directo</string>
    <string name="descripcionDirecto">Golpe mas contundente que el Jab, el pugil que lo ejecuta tiene que estar bien apoyado en el suelo y con mayor impulso de la cadera, del hombro y del giro del cuerpo.</string>
    <string name="Uppercut">Uppercut</string>
    <string name="descripcionUppercut">Golpe que se dirige de abajo hacia arriba buscando el menton. Para realizarlo es flexionando un poco las rodillas de esta manera usamos la fuerza del tren superior</string>
    <string name="Gancho">Gancho</string>
    <string name="descripcionGancho">Se puede realizar con las dos manos, dirigido a la cabeza de manera lateral, este golpe se realiza tambien al cuerpo acompañado de una flexion de rodillas</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Premium">Conviertete en Premium</string>
    <string name="Sombra">Entrenamiento con Sombra</string>
    <string name="Saco">Entrenamiento con Saco</string>
    <string name="Funcional">Entrenamiento funcional</string>
    <string name="HIIT">Entrenamiento HIIT</string>
    <string name="Equipo">Equipo de Boxeo</string>
    <string name="SaltarVendas">Saltar la cuerda y colocarse vendas</string>
    <string name="Estilos">Estilos de Boxeo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_menu1">Menu1</string>
    <string name="title_activity_menus">Menus</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>